# lingmo-ocr

./: CMakeLists.txt  com.lingmo.Ocr.service
.github/workflows/: build.yml
debian/: changelog  control
src/: CMakeLists.txt  main.cpp  ocrapplication.cpp
src/service/: dbusocr_adaptor.h  ocrinterface.h
